Fix Hero image size on mobile

--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -38,9 +38,9 @@
     }
 }
 
-@media screen and (max-width: 40em){
+@media screen and (max-width: 768px){
     .imageContainer {
-        width: 360px;
-        height: 360px;
+        width: 320px;
+        height: 320px;
     }
 }
